# hardware-pulse

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROJECT.md  README.md  pyproject.toml  requirements.txt
configs/: catalog.yaml  scrapers.yaml
data/: hardware_pulse.db
docs/: decisions.md  pipeline_design.md
notebooks/: 00_data_sanity.ipynb  01_eda.ipynb  02_model_evaluation.ipynb
scripts/: run_dashboard.py  run_features.py  run_ingest.py  run_pipeline.py  run_resolve.py
src/: config.py
src/auth/: ml_auth.py
src/dashboard/: app.py  queries.py  signals.py
src/domain/: models.py
src/entities/: __init__.py  catalog.py  matcher.py  normalizer.py  resolver.py
src/models/: __init__.py  base.py  elasticnet.py  evaluation.py  naive.py
src/pipelines/: features.py  ingest.py  resolve.py
src/scrapers/: banifox.py  base.py  mercadolibre.py  pccompu.py  thot.py
src/storage/: repository.py  schema.py
tests/: conftest.py  test_base_scraper.py  test_catalog.py  test_elasticnet.py  test_features.py  test_ingest.py  test_matcher.py  test_models.py  test_normalizer.py  test_repository.py  test_resolver.py
